# HPC-Acacia-DataPrep

./: .gitignore  README.md  RUN_SEQUENCE.md  databricks.yml  pre-commit.yml  pyproject.toml  setonix_requirements.txt
.github/workflows/: codecov.yml  scripts-ci.yml
contracts/: datasets.yml  mv_to_databricks.yml
jobs/: chunk_n_compress.sh  chunk_n_compress_dpird.sh  chunk_n_compress_ecmwf_array.sh  mv_to_DB_volume.sh  stage_in.sh  stage_out_webviz.sh  to_zarr.sh
jobs/checks/: to_zarr_dry_run.sh
scripts/: chunk_n_compress.py  mv_to_DB_volume.py  to_zarr.py
scripts/lib/: _contracts.py  encoding.py  mfdataset_pipeline.py
setonix/: 02.1-chunk_n_compress.py  02.1-chunk_n_compress.sh  02.2-to_zarr.py
setonix/checks/: before_after_virtuali.py  check_enc_zarr.py  check_enc_zarr.sh
tests/: test_chunk_n_compress.py  test_contracts.py  test_encoding.py  test_pipeline.py  test_to_zarr.py
utils/: local_chunk_n_compress.ipynb
