[project]
name = "hpc-acacia-dataprep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.0",
    "dask>=2026.3.0",
    "databricks-sdk>=0.108.0",
    "distributed>=2026.3.0",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "hdf5plugin>=6.0.0",
    "pyyaml>=6.0.0",
    "s3fs>=2026.3.0",
    "xarray>=2026.4.0",
    "zarr>=3.2.0",
]

[dependency-groups]
dev = [
    "bokeh>=3.9.0",
    "ipykernel>=7.2.0",
    "nbstripout>=0.9.1",
    "pytest-cov>=7.1.0",
]
